<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="#000000">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Question"
            android:layout_gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="25dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:gravity="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer1"
            />
        <TextView
            android:id="@+id/txt_answer_pop"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/answer_here"
            android:layout_marginTop="30dp"
            android:textStyle="italic"
            android:padding="20dp"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@drawable/button_smooth_red"
        android:layout_margin="20dp"/>
</LinearLayout>