<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#323232"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".View.LoginActivityView">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:foreground="@drawable/librarybackground3"
        app:cardCornerRadius="10dp"
        android:layout_margin="10dp"
        android:elevation="5dp"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="100dp"
        android:layout_width="200dp"
        android:src="@drawable/booklogo3"
        android:elevation="10dp"
        android:layout_centerHorizontal="true"
        android:layout_height="200dp"/>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        card_view:cardCornerRadius="10dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="170dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp" >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@drawable/bookslogo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="50dp"
                android:gravity="center"
                >
                <EditText
                    android:drawableLeft="@drawable/ic_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:id="@+id/txt_username"
                    android:layout_marginRight="30dp"
                    android:textColorHint="#000000"
                    android:hint="@string/username"
                    android:drawableStart="@drawable/ic_username" />
                <EditText
                    android:inputType="textPassword"
                    android:textColorHint="#000000"
                    android:id="@+id/txt_password"
                    android:drawableLeft="@drawable/ic_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/password"
                    android:drawableStart="@drawable/ic_password" />
                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColor="#FFFFFF"
                    android:text="@string/login"
                    android:paddingLeft="10dp"
                    android:background="@drawable/button_smooth_corners"
                    android:drawableLeft="@drawable/ic_login"
                    android:drawableStart="@drawable/ic_login" />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="#000000"
                android:layout_centerHorizontal="true"
                android:visibility="invisible"
                android:layout_alignParentBottom="true"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_gravity="center"
            android:layout_height="100dp"
            android:src="@drawable/bookslogo5"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/library_management_system"
            android:textSize="30sp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_margin="20dp"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:text="@string/no_account_yet"/>
        <TextView
            android:id="@+id/txt_signUp"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FF0000"
            android:textStyle="bold"
            android:text="@string/sign_up_now"
            android:focusable="true" />
    </LinearLayout>



</RelativeLayout>